🛠 Fixed something that sounded really dumb
'tip of your fingertips' lol

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 					<span class="text">At The Tip of Your</span>
 				</div>
 				<div class="hide">
-					<span class="text">fingertips.</span>
+					<span class="text">fingers.</span>
 				</div>
 			</div>
 		</div>
