🛠 Fixed broken links
;)

--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
 				<nav>
 					<h1 id="logo">Hover</h1>
 					<ul class="nav-links">
-						<li>Home</li>
-						<li>Contact</li>
-						<li>About</li>
+						<li href='https://www.youtube.com/watch?v=dQw4w9WgXcQ'>Home</li>
+						<li href='https://www.youtube.com/watch?v=dQw4w9WgXcQ'>Contact</li>
+						<li href='https://www.youtube.com/watch?v=dQw4w9WgXcQ'>About</li>
 					</ul>
 				</nav>
 				<h2 class="big-text">Just Hover</h2>
